# jlgametheory

./: .gitignore  README.md  index.html  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release-pypi.yml  update-release-notes.yml
docs/: conf.py
docs/_static/: autosummary_fixes.js  custom.css
docs/_templates/autosummary/: function.rst
jlgametheory/: __init__.py  juliapkg.json
latest/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
latest/.doctrees/: environment.pickle  index.doctree
latest/.doctrees/_autosummary/: jlgametheory.hc_solve.doctree  jlgametheory.lrsnash.doctree
latest/_autosummary/: jlgametheory.hc_solve.html  jlgametheory.lrsnash.html
latest/_modules/: index.html
latest/_modules/jlgametheory/: jlgametheory.html
latest/_sources/: index.rst.txt
latest/_sources/_autosummary/: jlgametheory.hc_solve.rst.txt  jlgametheory.lrsnash.rst.txt
latest/_static/: autosummary_fixes.js  autosummary_no_underline.css
stable/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
stable/.doctrees/: environment.pickle  index.doctree
stable/.doctrees/_autosummary/: jlgametheory.hc_solve.doctree
stable/_autosummary/: jlgametheory.hc_solve.html  jlgametheory.lrsnash.html
stable/_modules/: index.html
stable/_modules/jlgametheory/: jlgametheory.html
tests/: test_jlgametheory.py
