[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jlgametheory"
version = "0.1.0"
description = "Python interface to GameTheory.jl"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "QuantEcon"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "quantecon",
    "juliacall",
]

[project.urls]
Homepage = "https://github.com/QuantEcon/jlgametheory"
Repository = "https://github.com/QuantEcon/jlgametheory"
